# anneml

./: 00000000-0000-0000-0000-000000000000.annml  Cargo.toml  LICENSE  README.md
anneml/: 00000000-0000-0000-0000-000000000000.annml  Cargo.toml
anneml/src/: lib.rs  mod_node.rs
anneml/src/mod_node/: attribute.rs  domain.rs  edges.rs  layer.rs  mesh.rs  network.rs  node.rs  scope.rs  tensor.rs  utils.rs
anneml/src/mod_node/mod_processor/: processor.rs
anneml/src/node/: attribute.rs  layer.rs  mesh.rs  network.rs  node.rs  processor.rs
anneml/src/test/: mod_functional_tests.rs
anneml/src/test/functional_tests/: bias_tests.rs  scope_tests.rs  weight_tests.rs
anneml/src/test/mod_functional_tests/: bias_tests.rs  feed_forward_tests.rs  link_tests.rs  save_load_tests.rs  scope_tests.rs  weight_tests.rs
src/: lib.rs  node.rs
src/node/: attribute.rs  domain.rs  edges.rs  layer.rs  network.rs  node.rs  scope.rs  tensor.rs  utils.rs
src/node/processor/: processor.rs
src/test/: functional_tests.rs
src/test/functional_tests/: feed_forward_tests.rs  link_tests.rs  save_load_tests.rs
