[package]
name = "anneml"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = {version = "3.8.0", features = ["afserde"]}
serde = { version= "1.0.130" , features = ["derive","rc"]}
bincode = "1.3.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rustc-hash = "1.1.0"
serial_test = "0.5.1"